--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap");
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer base {
+  body {
+    background-color: #0d0c0d;
+
+    /* background-image: url("./assets/bg1.jpg");
+    background-size: cover;
+    background-repeat: no-repeat; */
+
+    font-family: "Roboto", sans-serif;
+  }
+
+  html {
+    @apply scroll-smooth;
+  }
+
+  nav {
+    font-family: "Playfair Display", serif;
+  }
+
+  section {
+    @apply text-white pt-28;
+  }
 }
