--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap"); */
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Serif:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400&display=swap");
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -14,12 +17,13 @@
 @layer base {
   body {
     background-color: #0d0c0d;
-
+    /* background-color: #111; */
+    /* #202020 */
     /* background-image: url("./assets/bg1.jpg");
     background-size: cover;
     background-repeat: no-repeat; */
-
-    font-family: "Roboto", sans-serif;
+    font-family: "Roboto Serif", serif;
+    /* font-family: "Roboto", sans-serif; */
   }
 
   a {
@@ -30,16 +34,13 @@
     @apply scroll-smooth;
   }
   nav {
-    font-family: "Playfair Display", serif;
+    font-family: "Roboto Serif", serif;
   }
 
   section {
     @apply pt-28 text-white;
   }
 
-  h6 {
-    font-family: "Playfair Display", serif;
-  }
   li {
     /* font-family: "Playfair Display", serif; */
     /* font-family: "Poppins" sans-serif; */
