--- a/src/index.css
+++ b/src/index.css
@@ -38,11 +38,11 @@
   }
 
   section {
-    @apply pt-28 text-white;
+    @apply mx-auto min-h-screen w-11/12 max-w-5xl pt-24 text-white md:w-4/5 md:pt-52;
   }
 
-  li {
-    /* font-family: "Playfair Display", serif; */
-    /* font-family: "Poppins" sans-serif; */
+  input,
+  textarea {
+    @apply w-full border-b-[1px] border-gray-600 bg-lightBlack py-2 placeholder:text-lightGray focus:outline-none;
   }
 }
